--- a/zoo.html
+++ b/zoo.html
@@ -6,6 +6,9 @@
 <head>
 	<title>Welcome to the Zoo!</title>
 
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="zoo.css">
 </head>
 
@@ -13,6 +16,13 @@
 
 <body>
 
+	<div id="navbar">
+		<a href="">Home</a>
+		<a href="">Pictures</a>
+		<a href="">Map</a>
+		
+		<a href="" id="contact">Contact</a>
+	</div>
 
 	<script type="text/javascript" src="zoo.js"></script>
 
