--- a/zoo.html
+++ b/zoo.html
@@ -21,6 +21,7 @@
 		<a href="">Pictures</a>
 		<a href="">Map</a>
 		
+		<a href="" id="menu">a</a>
 		<a href="" id="contact">Contact</a>
 	</div>
 
