--- a/zoo.html
+++ b/zoo.html
@@ -9,6 +9,8 @@
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+
 	<link rel="stylesheet" type="text/css" href="zoo.css">
 </head>
 
