navbar style update

--- a/zoo.html
+++ b/zoo.html
@@ -19,12 +19,18 @@
 <body>
 
 	<div id="navbar">
-		<a href="">Home</a>
-		<a href="">Pictures</a>
-		<a href="">Map</a>
+		<a href="" class="navLink">Home</a>
+		<a href="" class="navLink">Pictures</a>
+		<a href="" class="navLink">Map</a>
 		
-		<a href="" id="menu">a</a>
-		<a href="" id="contact">Contact</a>
+		<h1>Zoo</h1>
+
+		<a href="" id="menu">
+			<div class="layer"></div>
+			<div id="middle"></div>
+			<div class="layer"></div>
+		</a>
+		<a href="" id="contact" class="navLink">Contact</a>
 	</div>
 
 	<script type="text/javascript" src="zoo.js"></script>
