mobile menu dropdown addition

--- a/zoo.html
+++ b/zoo.html
@@ -11,6 +11,9 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 
+	<!-- Icon from http://www.pngall.com/giraffe-png/download/18715 -->
+	<link rel="icon" type="image/png" href="giraffe.png">
+
 	<link rel="stylesheet" type="text/css" href="zoo.css">
 </head>
 
@@ -25,11 +28,11 @@
 		
 		<h1>Zoo</h1>
 
-		<a href="" id="menu">
+		<button href="" id="menu">
 			<div class="layer"></div>
-			<div id="middle"></div>
 			<div class="layer"></div>
-		</a>
+			<div class="layer"></div>
+		</button>
 		<a href="" id="contact" class="navLink">Contact</a>
 	</div>
 
