home page style update

--- a/zoo.html
+++ b/zoo.html
@@ -50,7 +50,10 @@
 		<h1 id="homeIntro">The San Diego Zoo is a zoo in Balboa Park, San Diego, California, housing more than 3,500 animals of more than 650 species and subspecies.</h1>
 		<!-- https://www.arestravel.com/how-make-most-single-day-visit-san-diego-zoo/ -->
 		<img src="sdzoo.jpg" id="homeImage">
+	</div>
 
+	<div id="pictureSection">
+		<img src="">
 	</div>
 
 	<script type="text/javascript" src="zoo.js"></script>
