--- a/zoo.html
+++ b/zoo.html
@@ -56,6 +56,10 @@
 		<img src="">
 	</div>
 
+	<div id="mapSection">
+		<img src="">
+	</div>
+
 	<script type="text/javascript" src="zoo.js"></script>
 
 </body>
