pictures addition and styling

--- a/zoo.html
+++ b/zoo.html
@@ -52,8 +52,11 @@
 		<img src="sdzoo.jpg" id="homeImage">
 	</div>
 
-	<div id="pictureSection">
-		<img src="">
+	<div class="pictureSection">
+		<!-- https://www.sdzsafaripark.org/photo-gallery -->
+		<div class=pictures><img src="img1.jpg" alt=""></div>
+		<div class=pictures><img src="img2.jpg" alt=""></div>
+		<div class=pictures><img src="img3.jpg" alt=""></div>
 	</div>
 
 	<div id="mapSection">
