--- a/zoo.html
+++ b/zoo.html
@@ -59,8 +59,9 @@
 		<div class=pictures><img src="img3.jpg" alt=""></div>
 	</div>
 
-	<div id="mapSection">
-		<img src="">
+	<div class="mapSection">
+		<!-- http://ontheworldmap.com/usa/city/san-diego/san-diego-zoo-map.html -->
+		<div class=map><img src="map.jpg" alt=""></div>
 	</div>
 
 	<script type="text/javascript" src="zoo.js"></script>
