a tag href addition

--- a/zoo.html
+++ b/zoo.html
@@ -22,9 +22,9 @@
 <body>
 
 	<div id="navbar">
-		<a href="" class="navLink">Home</a>
-		<a href="" class="navLink">Pictures</a>
-		<a href="" class="navLink">Map</a>
+		<a href="#homeSection" class="navLink">Home</a>
+		<a href="#pictureSection" class="navLink">Pictures</a>
+		<a href="#mapSection" class="navLink">Map</a>
 		
 		<h1>Zoo</h1>
 
@@ -52,14 +52,14 @@
 		<img src="sdzoo.jpg" id="homeImage">
 	</div>
 
-	<div class="pictureSection">
+	<div id="pictureSection">
 		<!-- https://www.sdzsafaripark.org/photo-gallery -->
 		<div class=pictures><img src="img1.jpg" alt=""></div>
 		<div class=pictures><img src="img2.jpg" alt=""></div>
 		<div class=pictures><img src="img3.jpg" alt=""></div>
 	</div>
 
-	<div class="mapSection">
+	<div id="mapSection">
 		<!-- http://ontheworldmap.com/usa/city/san-diego/san-diego-zoo-map.html -->
 		<div class=map><img src="map.jpg" alt=""></div>
 	</div>
