--- a/zoo.html
+++ b/zoo.html
@@ -37,9 +37,9 @@
 	</div>
 
 	<div class="dropdown">
-		<a href="" class="dropdownNavLink">Home</a>
-		<a href="" class="dropdownNavLink">Pictures</a>
-		<a href="" class="dropdownNavLink">Map</a>
+		<a href="#homeSection" id="dropdownHome" class="dropdownNavLink">Home</a>
+		<a href="#pictureSection" class="dropdownNavLink">Pictures</a>
+		<a href="#mapSection" class="dropdownNavLink">Map</a>
 		<a href="" class="dropdownNavLink">Contact</a>
 	</div>
 
