contact page work

--- a/zoo.html
+++ b/zoo.html
@@ -33,14 +33,14 @@
 			<div class="layer"></div>
 			<div class="layer"></div>
 		</button>
-		<a href="" id="contact" class="navLink">Contact</a>
+		<a href="zooContact.html" id="contact" class="navLink">Contact</a>
 	</div>
 
 	<div class="dropdown">
 		<a href="#homeSection" id="dropdownHome" class="dropdownNavLink">Home</a>
 		<a href="#pictureSection" class="dropdownNavLink">Pictures</a>
 		<a href="#mapSection" class="dropdownNavLink">Map</a>
-		<a href="" class="dropdownNavLink">Contact</a>
+		<a href="zooContact.html" class="dropdownNavLink">Contact</a>
 	</div>
 
 
