contact page work

--- a/zooContact.html
+++ b/zooContact.html
@@ -20,7 +20,13 @@
 
 <body>
 
-    
+    <div id="navbar">
+		
+		<a href="zoo.html" id="mainPage">Zoo</a>
+
+		<a href="zooContact.html" id="contactPage">Contact</a>
+
+	</div>
 
 </body>
 
