contact page styling

--- a/zooContact.html
+++ b/zooContact.html
@@ -28,6 +28,10 @@
 
 	</div>
 
+	<div class="contactInfo">
+		<h2 class="contactText">Address: 2920 Zoo Dr, San Diego, CA 92101</h2>
+	</div>
+
 </body>
 
 
